--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
 :root {
-	--dark-color-a: #667aff;
-	--dark-color-b: #7386ff;
+	--dark-color-a: #000000;
+	--dark-color-b: #31312f;
 	--light-color: #e6e9ff;
 	--success-color: #5cb85c;
 	--error-color: #d9534f;
@@ -41,7 +41,7 @@ a {
 /* Chat Page */
 
 .chat-container {
-	max-width: 1100px;
+	max-width: 1400px;
 	background: #fff;
 	margin: 30px auto;
 	overflow: hidden;
@@ -176,6 +176,7 @@ a {
 .join-main .btn {
 	margin-top: 20px;
 	width: 100%;
+	border-radius: 7px;
 }
 
 @media (max-width: 700px) {
