--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
 :root {
-	--dark-color-a: #667aff;
-	--dark-color-b: #7386ff;
-	--light-color: #e6e9ff;
+	--dark-color-a: #121212;
+	--dark-color-b: #1212128f;
+	--light-color: #1212127a;
 	--success-color: #5cb85c;
 	--error-color: #d9534f;
 }
@@ -32,8 +32,9 @@ a {
 .btn {
 	cursor: pointer;
 	padding: 5px 15px;
+	border-radius: 5px;
 	background: var(--light-color);
-	color: var(--dark-color-a);
+	color: #fff;
 	border: 0;
 	font-size: 17px;
 }
@@ -42,7 +43,7 @@ a {
 
 .chat-container {
 	max-width: 1100px;
-	background: #fff;
+	background: #ffffffbd;
 	margin: 30px auto;
 	overflow: hidden;
 }
